--- a/EC_Repuetos_v2/EC_Repuetos_v2.csproj
+++ b/EC_Repuetos_v2/EC_Repuetos_v2.csproj
@@ -25,6 +25,7 @@
     <UseGlobalApplicationHostFile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <Use64BitIISExpress />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -198,6 +199,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\EC_COMPRASController.cs" />
     <Compile Include="Controllers\EC_PRODUCTOSController.cs" />
     <Compile Include="Controllers\EC_USUARIOSController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -279,7 +281,9 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -324,6 +328,11 @@
     <Content Include="Views\EC_PRODUCTOS\Details.cshtml" />
     <Content Include="Views\EC_PRODUCTOS\Edit.cshtml" />
     <Content Include="Views\EC_PRODUCTOS\Index.cshtml" />
+    <Content Include="Views\EC_COMPRAS\Create.cshtml" />
+    <Content Include="Views\EC_COMPRAS\Delete.cshtml" />
+    <Content Include="Views\EC_COMPRAS\Details.cshtml" />
+    <Content Include="Views\EC_COMPRAS\Edit.cshtml" />
+    <Content Include="Views\EC_COMPRAS\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
