--- a/EC_Repuetos_v2/Web.config
+++ b/EC_Repuetos_v2/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-EC_Repuetos_v2-20180903093846.mdf;Initial Catalog=aspnet-EC_Repuetos_v2-20180903093846;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="DB_PROYECTO_WEBEntities" connectionString="metadata=res://*/Models.EC_Repuestos.csdl|res://*/Models.EC_Repuestos.ssdl|res://*/Models.EC_Repuestos.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=JORDY\SQLEXPRESS;initial catalog=DB_PROYECTO_WEB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DB_PROYECTO_WEBEntities" connectionString="metadata=res://*/Models.EC_Repuestos.csdl|res://*/Models.EC_Repuestos.ssdl|res://*/Models.EC_Repuestos.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-0IHSGVS\SQLEXPRESS;initial catalog=DB_PROYECTO_WEB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
